appId: host.exp.exponent
---
- launchApp
- assertVisible: "Doktori"
- tapOn: "Espace Pro →"
- assertVisible: "Médecin"
- assertVisible: "Secrétaire"
- tapOn: "Médecin"
- assertVisible: "Email"
